Update css to prevent menu bar overflowing.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/menubar/menubar.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/menubar/menubar.css
@@ -5,6 +5,7 @@
 
 .ck.ck-menu-bar {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: flex-start;
 	background: var(--ck-color-base-background);
 	padding: var(--ck-spacing-small);
