--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/menubar/menubarmenu.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/menubar/menubarmenu.css
@@ -7,3 +7,7 @@
 	/* Enable font size inheritance, which allows fluid UI scaling. */
 	font-size: inherit;
 }
+
+.ck.ck-menu-bar__menu_top-level > button {
+	max-width: 200px;
+}
